<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Google Places and Maps</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Your Nearest Places</string>
    <string name="title_activity_front_page">Book it</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cinemas">LIST OF MOVIES</string>
    <string name="title_activity_screenshots">Screenshots</string>
    <string name="title_activity_details">MOVIE DETAILS</string>
    <string name="bookButton">BOOK</string>
    <string name="Date">RELEASE DATE</string>
    <string name="Time">RUNTIME</string>
    <string name="Director">DIRECTOR</string>
    <string name="Genre">GENRE</string>
    <string name="Language">LANGUAGE</string>
    <string name="action_search">Search</string>
    <string name="title_activity_bookit">Bookit</string>
    <string name="title_activity_tab_search">TabSearch</string>
    <string name="title_activity_movie_timings">MovieTimings</string>
    <string name="title_activity_my_show">MyShow</string>
    <string name="title_activity_seat_plan">SeatPlan</string>
    <string name="title_activity_bank">Bank</string>
    <string name="payOpt">Payment Options</string>
    <string name="cdCard">CREDIT / DEBIT CARD</string>
    <string name="netB">NET BANKING</string>
    <string name="type">SELECT TYPE</string>
    <string name="cNo">CARD NUMBER</string>
    <string name="cvv">CVV CODE</string>
    <string name="amt">TOTAL AMOUNT  ₹ </string>
    <string name="pay">PAY</string>
    <string name="rcredit">CREDIT</string>
    <string name="rDebit">DEBIT</string>
    <string name="choose">Choose your Bank</string>
    <string name="uid">USER ID</string>
    <string name="pass">PASSWORD</string>
    <string name="submit">SUBMIT</string>
    <string name="title_activity_submit">Submit</string>
    <string name="welcome">Welcome </string>
    <string name="title_activity_credit">Credit</string>
    <string name="title_activity_net_bank">NetBank</string>
    <string name="title_activity_bank_login">BankLogin</string>

</resources>