<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
   >

<LinearLayout
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:orientation="vertical">
    
    <TableLayout
        android:layout_height="wrap_content" 
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:shrinkColumns="0"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="60dp" 
       >
       
        <TableRow >
            <TextView  android:text="@string/type"
                	   android:layout_marginRight="10dp"
                	    android:textColor="@color/red" 
                	   android:padding="7dp"/>
            	
            <RadioGroup android:id="@+id/radioGrp"
                		android:orientation="horizontal">
                			
                <RadioButton android:id="@+id/creditType"
                    		 android:text="@string/rcredit" />
                
                <RadioButton android:id="@+id/debitType"
                    		 android:text="@string/rDebit" />
            </RadioGroup>
                      
        </TableRow>
        
        
        <TableRow android:layout_marginTop="40dp">
			<TextView android:text="@string/cNo"
			    	   android:textColor="@color/blue" 
			    	  />
            
            <EditText android:id="@+id/cardNo"
					  android:inputType="number"
					  android:hint="XXXX XXXX XXXX XXXX"/>
                
        </TableRow>
        
        
          <TableRow android:layout_marginTop="30dp">
            
               <TextView  android:text="@string/cvv"
                   		  android:id="@+id/cvvText"
                   		  android:textColor="@color/blue" 
                   		 />
            
              <EditText  android:id="@+id/cvv"
                         android:maxLength="4"
                         android:inputType="numberPassword"
                         android:hint="XXXX"
                        />    
        </TableRow>
        
          
       <TableRow  android:layout_marginTop="30dp">
           <TextView android:text="@string/amt"
               		  android:textColor="@color/red"   />
           
           
           
           <TextView android:id="@+id/balance"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content" />
      </TableRow>
              
    </TableLayout>
    <Button 
              android:id="@+id/payButton"
              android:layout_marginTop="60dp"
              android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:text="@string/pay"
              android:onClick="makePayment"
              style="@style/BankButton"
   />     
</LinearLayout>
</ScrollView>