<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
     
    <TextView
        android:layout_marginTop="80dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/payOpt"
		android:textColor="@color/blue"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    
    <Button 
        android:id="@+id/creditButton"
        android:layout_marginTop="45dp"
        android:layout_height="wrap_content"
         android:layout_width="fill_parent"
        android:text="@string/cdCard"
        style="@style/BankButton"
     />
      
    <Button 
        android:id="@+id/netButton"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
         android:layout_width="fill_parent"
        android:text="@string/netB"
        style="@style/BankButton"
        />

</LinearLayout>
