<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:scrollbars="vertical">
    <RelativeLayout
         android:layout_height="fill_parent"
         android:layout_width="fill_parent"
         android:orientation="vertical"
         android:scrollbars="horizontal"
         
         >
         
        <ImageView
            android:id="@+id/image"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
         	android:layout_alignParentTop="true"
         	android:layout_marginTop="20dp"
           />
        
        <Button
            android:id="@+id/trailer"
            android:layout_height="35dp" 
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="SHOW TRAILER"
            style="@style/bookButton"
            android:layout_below="@id/image"
            android:onClick="showTrailer"/>   
            
        <Button
            android:id="@+id/screenShots"
            android:layout_height="35dp" 
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="SCREENSHOTS"
            style="@style/bookButton"
            android:layout_below="@id/trailer"
            android:onClick="screenShots"
           />   
           
         <Button
            android:id="@+id/bookButton"
            android:layout_height="35dp" 
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:text="BOOK"
            style="@style/bookButton"
            android:layout_below="@id/screenShots"
            android:onClick="buttonClick"
           />   
        
        
        <TextView 
            android:id="@+id/textView1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:textStyle="italic"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/bookButton"
            style="@style/MovieText"
            />
        
        <RatingBar
        	android:id="@+id/ratingbar"
        	android:layout_height="wrap_content"
        	android:layout_width="wrap_content"
        	android:numStars="5"
        	android:layout_marginRight="28dp"
        	android:layout_marginTop="10dp"
        	android:layout_below="@id/bookButton"
        	android:layout_alignParentRight="true"
        	style="?android:attr/ratingBarStyleSmall"
        	/>
        
       
         <TableLayout
        	android:layout_height="wrap_content"
        	android:layout_width="fill_parent"
         	android:layout_marginLeft="30dp"
        	android:layout_marginTop="30dp"
        	android:layout_below="@id/textView1"
       >
        <TableRow android:layout_marginBottom="20dp"
           >
            <TextView 
                android:text="@string/Date"
                android:layout_height="wrap_content"
            	android:layout_width="wrap_content"
            	 android:layout_marginRight="20dp"
            	 android:textColor="@color/red"/>
            
            <TextView 
                android:id="@+id/dateText"
                android:layout_height="wrap_content"
            	android:layout_width="wrap_content"
            	/>
           
        </TableRow>
        
         <TableRow   android:layout_marginBottom="20dp">
            <TextView 
                android:text="@string/Time"
                android:layout_height="wrap_content"
            	android:layout_width="wrap_content"
            	 android:layout_marginRight="20dp"
            	 android:textColor="@color/red"/>
            
            <TextView 
                android:id="@+id/timeText"
                android:layout_height="wrap_content"
            	android:layout_width="wrap_content"/>
           
        </TableRow>
        
           <TableRow   android:layout_marginBottom="20dp">
            <TextView 
                android:text="@string/Director"
                android:layout_height="wrap_content"
            	android:layout_width="wrap_content"
            	 android:layout_marginRight="20dp"
            	 android:textColor="@color/red"/>
            
            <TextView 
                android:id="@+id/dirText"
                android:layout_height="wrap_content"
            	android:layout_width="wrap_content"/>
           
        </TableRow>
        
             <TableRow   android:layout_marginBottom="20dp">
            <TextView 
                android:text="@string/Genre"
                android:layout_height="wrap_content"
            	android:layout_width="wrap_content"
            	 android:layout_marginRight="20dp"
            	 android:textColor="@color/red"/>
            
            <TextView 
                android:id="@+id/genreText"
                android:layout_height="wrap_content"
            	android:layout_width="wrap_content"/>
           
        </TableRow>
        
               <TableRow   android:layout_marginBottom="20dp">
            <TextView 
                android:text="@string/Language"
                android:layout_height="wrap_content"
            	android:layout_width="wrap_content"
            	 android:layout_marginRight="20dp"
            	 android:textColor="@color/red"/>
            
            <TextView 
                android:id="@+id/langText"
                android:layout_height="wrap_content"
            	android:layout_width="wrap_content"/>
           
        </TableRow>
        
        <VideoView 
            android:id="@+id/videoView"
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:visibility="invisible"
            />
      
    </TableLayout>

   </RelativeLayout>      
   </ScrollView> 
         
